@@ -45,8 +45,7 @@ public class StreamingBinaryResponseParser extends BinaryResponseParser {
   
   @Override
   public NamedList<Object> processResponse(InputStream body, String encoding) {
-    try {
-      JavaBinCodec codec = new JavaBinCodec() {
+    try (JavaBinCodec codec = new JavaBinCodec() {
 
         @Override
         public SolrDocument readSolrDocument(DataInputInputStream dis) throws IOException {
@@ -80,7 +79,7 @@ public class StreamingBinaryResponseParser extends BinaryResponseParser {
           }
           return solrDocs;
         }
-      };
+      };) {
       
       return (NamedList<Object>) codec.unmarshal(body);
     } 
